# amd-variant-provider

./: LICENSE  README.md  pyproject.toml
amd_variant_provider/: __init__.py  detect_rocm.py  plugin.py  pyrsmi.py
docs/: index.html
docs/amd-variant-provider/: amd_variant_provider-0.0.2-py3-none-any.whl  index.html
