# Defines the build system (e.g., Flit, Setuptools) that will package the code.
# This section is mandatory in a "pyproject.toml" file
[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

# Contains all the project metadata, dependencies, and the entry point.
[project]
name = "amd-variant-provider"
authors = [{ name = "WheelNext Community" }]
maintainers = [
    { name = "Jithun Nair", email = "jithun.nair@amd.com" },
    { name = "Jeff Daily", email = "jeff.daily@amd.com" },
    { name = "Glen Cao", email = "glen.cao@amd.com" },
]
license = { text = "MIT" }  # Modern way to specify a standard license
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
urls = { Home = "https://github.com/wheelnext/amd-variant-provider/" }
# The version and description can be stored here or dynamically in __init__.py.
dynamic = ["version", "description"]

# As the WheelNext initiative matured and the specification was finalized for integration with the official `wheel` and `pip` tools, the name was changed to "wheel.variant_providers".
# This makes it explicitly clear that this is a plugin for the `wheel` tool.
[project.entry-points."wheel.variant_plugins"]
amd_variant_provider = "amd_variant_provider:get_variants"
